# synth-city

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gpu  MODEL_README.md  PLAN.md  README.md  Readme.md  config.py  docker-compose.yml  main.py  plan.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  docker-gpu.yml
cli/: app.py  dashboard.py  display.py  history_dashboard.py  score_dashboard.py
compute/: basilica.py  entrypoint.py  training_server.py
dashboard/: index.html
data/: market.py  preprocessing.py
docs/: BLOG_POST.md  PHILOSOPHY.md  SETUP_GUIDE.md  api-reference.md  architecture.md  configuration.md  deployment.md  development.md  troubleshooting.md
integrations/openclaw/: bot_sessions.py  bridge.py  client.py  publish.py  setup.py
integrations/openclaw/skill/: SKILL.md  clawhub.json  tools.py
live_validator/: __init__.py  dashboard.py  leaderboard.py  price_feed.py  runner.py  scoring.py
models/: base.py  garch.py  gbm.py  stochastic_vol.py
models/neural/: lstm_garch.py  nsvm.py
pipeline/: bootstrap.py  change_tracker.py  meta_strategy.py  monitor.py  orchestrator.py  pipeline_def.py
pipeline/agents/: agent_designer.py  author.py  base.py  code_checker.py  debugger.py  pipeline_architect.py  planner.py  publisher.py  trainer.py
pipeline/prompts/: agent_designer_prompts.py  author_prompts.py  checker_prompts.py  debugger_prompts.py  fragments.py  pipeline_architect_prompts.py  planner_prompts.py  publisher_prompts.py  trainer_prompts.py
pipeline/providers/: chutes_client.py  simple_agent.py
pipeline/tools/: agent_tools.py  analysis_tools.py  change_tracking_tools.py  check_shapes.py  data_loader.py  file_tools.py  hippius_store.py  market_data.py  meta_strategy_tools.py  orchestration_tools.py  proxy_tools.py  publish_tools.py  register_tools.py  registry.py  research_tools.py  tool_authoring.py  training_tools.py
subnet/: backtest.py  config.py  miner.py  score_tracker.py  validator.py
tests/: test_horizon_enforcement.py  test_monitor.py  test_novelty.py  test_openclaw.py  test_proxy_tools.py
