[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-city"
version = "0.1.0"
description = "Agentic layer for building and training competitive models on Bittensor Subnet 50 (Synth)"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.12.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyarrow>=15.0.0",
    "scipy>=1.12.0",
    "torch>=2.2.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3",
    "properscoring",
    "torchsde",
    "wandb==0.25.0",
    "trackio",
    "huggingface_hub",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "basilica-sdk>=0.17.0",
    "rich>=13.0",
]

[project.scripts]
synth-city = "cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["pipeline*", "integrations*", "compute*", "subnet*", "cli*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
# Many dependencies (basilica, wandb, osa, torch, etc.) don't ship type stubs
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
